manifests/bookinfo/ocp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: productpage
  name: productpage
spec: 
  port:
    targetPort: https
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: 9080
